--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ grin_core = { path = "./core" }  # Drops version; uses local path
 grin_chain = { path = "./chain" }  # Drops version; uses local path
 grin_etc = { path = "./etc" }  # Drops version; uses local path
 grin_keychain= { path = "./keychain" }  # Drops version; uses local path
+grin_p2p = { path = "./p2p" }  # Drops version; uses local path
 clap = { version = "2.33", features = ["yaml"] }
 rpassword = "4.0"
 thiserror = "1"
