--- a/chain/Cargo.toml
+++ b/chain/Cargo.toml
@@ -26,7 +26,7 @@ lazy_static = "1"
 grin_core = { path = "../core", version = "5.4.0-alpha.0" }
 grin_keychain = { path = "../keychain", version = "5.4.0-alpha.0" }
 grin_store = { path = "../store", version = "5.4.0-alpha.0" }
-grin_util = { path = "../util", version = "5.4.0-alpha.0" }
+grin_wallet_util = { path = "../../lurker-wallet/util" }
 
 [dev-dependencies]
 env_logger = "0.7"
