--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -29,7 +29,7 @@ zeroize = { version = "1.1", features =["zeroize_derive"] }
 bytes = "0.5"
 
 keychain = { package = "grin_keychain", path = "../keychain", version = "5.4.0-alpha.0" }
-util = { package = "grin_util", path = "../util", version = "5.4.0-alpha.0" }
+util = { package = "grin_wallet_util", path = "../../lurker-wallet/util", version = "5.4.0-alpha.0" }
 
 [dev-dependencies]
 serde_json = "1"
