--- a/p2p/Cargo.toml
+++ b/p2p/Cargo.toml
@@ -24,7 +24,7 @@ bytes = "0.5"
 
 grin_core = { path = "../core", version = "5.4.0-alpha.0" }
 grin_store = { path = "../store", version = "5.4.0-alpha.0" }
-grin_util = { path = "../util", version = "5.4.0-alpha.0" }
+grin_wallet_util = { path = "../../lurker-wallet/util", version = "5.4.0-alpha.0" }
 grin_chain = { path = "../chain", version = "5.4.0-alpha.0" }
 
 [dev-dependencies]
