--- a/pool/Cargo.toml
+++ b/pool/Cargo.toml
@@ -20,7 +20,7 @@ chrono = "0.4.11"
 
 grin_core = { path = "../core", version = "5.4.0-alpha.0" }
 grin_keychain = { path = "../keychain", version = "5.4.0-alpha.0" }
-grin_util = { path = "../util", version = "5.4.0-alpha.0" }
+grin_wallet_util = { path = "../../lurker-wallet/util", version = "5.4.0-alpha.0" }
 
 [dev-dependencies]
 grin_chain = { path = "../chain", version = "5.4.0-alpha.0" }
