--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ linefeed = "0.6"
 semver = "0.10"
 rustyline = "6"
 lazy_static = "1"
+grin_util = "5.3.3"
 
 grin_wallet_api = { path = "../lurker-wallet/api", version = "5.4.0-alpha.1" }
 grin_wallet_impls = { path = "../lurker-wallet/impls", version = "5.4.0-alpha.1" }
@@ -57,3 +58,4 @@ serde_derive = "1"
 serde_json = "1"
 remove_dir_all = "0.7"
 easy-jsonrpc-mw = "0.5.4"
+
