--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2018"
 
 [dependencies]
 blake2 = { package = "blake2-rfc", version = "0.2"}
+randomx-rs = "1.4.1"  # Latest as of 2025
 byteorder = "1"
 croaring = "1.0.1"
 enum_primitive = "0.1"
@@ -27,9 +28,10 @@ log = "0.4"
 chrono = { version = "0.4.11", features = ["serde"] }
 zeroize = { version = "1.1", features =["zeroize_derive"] }
 bytes = "0.5"
+grin_util = "5.3.3"
 
 keychain = { package = "grin_keychain", path = "../keychain", version = "5.4.0-alpha.0" }
-util = { package = "grin_wallet_util", path = "../../lurker-wallet/util", version = "5.4.0-alpha.0" }
+grin_wallet_util = { path = "../../lurker-wallet/util", version = "5.4.0-alpha.1" }
 
 [dev-dependencies]
 serde_json = "1"
