--- a/keychain/Cargo.toml
+++ b/keychain/Cargo.toml
@@ -19,6 +19,7 @@ serde_derive = "1"
 serde_json = "1"
 lazy_static = "1"
 zeroize = { version = "1.1", features =["zeroize_derive"] }
+grin_util = "5.3.3"
 
 digest = "0.9"
 hmac = "0.11"
@@ -26,4 +27,4 @@ ripemd160 = "0.9"
 sha2 = "0.9"
 pbkdf2 = "0.8"
 
-grin_wallet_util = { path = "../../lurker-wallet/util", version = "5.4.0-alpha.0" }
+grin_wallet_util = { path = "../../lurker-wallet/util", version = "5.4.0-alpha.1" }
