--- a/pool/Cargo.toml
+++ b/pool/Cargo.toml
@@ -17,6 +17,7 @@ serde_derive = "1"
 thiserror = "1"
 log = "0.4"
 chrono = "0.4.11"
+grin_util = "5.3.3"
 
 grin_core = { path = "../core", version = "5.4.0-alpha.0" }
 grin_keychain = { path = "../keychain", version = "5.4.0-alpha.0" }
