--- a/store/Cargo.toml
+++ b/store/Cargo.toml
@@ -20,6 +20,7 @@ serde = "1"
 serde_derive = "1"
 thiserror = "1"
 log = "0.4"
+grin_util = "5.3.3"
 
 grin_core = { path = "../core", version = "5.4.0-alpha.0" }
 grin_wallet_util = { path = "../../lurker-wallet/util", version = "5.4.0-alpha.0" }
