--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -31,7 +31,7 @@ grin_util = "5.3.3"
 siphasher = "0.3.11"
 
 keychain = { package = "grin_keychain", path = "../keychain", version = "5.4.0-alpha.0" }
-grin_wallet_util = { path = "../../lurker-wallet/util", version = "5.4.0-alpha.1" }
+grin_wallet_util = { path = "../../lurker-wallet/util" }
 
 [dev-dependencies]
 serde_json = "1"
