--- a/servers/Cargo.toml
+++ b/servers/Cargo.toml
@@ -28,6 +28,9 @@ async-stream = "0.3"
 rustls = "0.20"
 walkdir = "2.3.1"
 
+grin_api = { path = "../api" }
+grin_util = { path = "../util" }
+
 grin_wallet_api = { path = "../../lurker-wallet/api", version = "5.4.0-alpha.0" }
 grin_chain = { path = "../chain", version = "5.4.0-alpha.0" }
 grin_core = { path = "../core", version = "5.4.0-alpha.0" }
