--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -27,8 +27,9 @@ log = "0.4"
 chrono = { version = "0.4.11", features = ["serde"] }
 zeroize = { version = "1.1", features =["zeroize_derive"] }
 bytes = "0.5"
-grin_util = "5.3.3"
 siphasher = "0.3.11"
+
+grin_util = { path = "../util" }
 
 keychain = { package = "grin_keychain", path = "../keychain", version = "5.4.0-alpha.0" }
 grin_wallet_util = { path = "../../lurker-wallet/util" }
