--- a/p2p/Cargo.toml
+++ b/p2p/Cargo.toml
@@ -21,7 +21,8 @@ tempfile = "3.1"
 log = "0.4"
 chrono = { version = "0.4.11", features = ["serde"] }
 bytes = "0.5"
-grin_util = "5.3.3"
+
+grin_util = { path = "../util" }
 
 grin_core = { path = "../core", version = "5.4.0-alpha.0" }
 grin_store = { path = "../store", version = "5.4.0-alpha.0" }
