--- a/pool/Cargo.toml
+++ b/pool/Cargo.toml
@@ -4,26 +4,28 @@ version = "5.4.0-alpha.0"
 authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
 description = "Chain implementation for grin, a simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
 license = "Apache-2.0"
-repository = "https://github.com/mimblewimble/grin"
+repository = "https://github.com/jojapoppa/lurker"
 keywords = [ "crypto", "grin", "mimblewimble" ]
-workspace = '..'
+workspace = ".."
 edition = "2018"
 
 [dependencies]
 blake2-rfc = "0.2"
 rand = "0.6"
-serde = "1"
+serde = { version = "1", features = ["derive"] }
 serde_derive = "1"
+serde_json = "1"
 thiserror = "1"
 log = "0.4"
 chrono = "0.4.11"
+tokio = { version = "1", features = ["net", "rt-multi-thread"] }
+yggdrasilctl = { version = "1.2", default-features = false, features = ["use_tokio"] }
+bincode = "1"
 
 grin_util = { path = "../util" }
-
 grin_core = { path = "../core", version = "5.4.0-alpha.0" }
 grin_p2p = { path = "../p2p", version = "5.4.0-alpha.0" }
 grin_keychain = { path = "../keychain", version = "5.4.0-alpha.0" }
-
 grin_wallet_util = { path = "../../lurker-wallet/util", version = "5.4.0-alpha.0" }
 
 [dev-dependencies]
