--- a/pool/Cargo.toml
+++ b/pool/Cargo.toml
@@ -18,15 +18,15 @@ serde_json = "1"
 thiserror = "1"
 log = "0.4"
 chrono = "0.4.11"
-tokio = { version = "1", features = ["net", "rt-multi-thread"] }
+tokio = { version = "1", features = ["net", "rt-multi-thread", "time"] }
 yggdrasilctl = { version = "1.2", default-features = false, features = ["use_tokio"] }
 bincode = "1"
-
 grin_util = { path = "../util" }
 grin_core = { path = "../core", version = "5.4.0-alpha.0" }
 grin_p2p = { path = "../p2p", version = "5.4.0-alpha.0" }
 grin_keychain = { path = "../keychain", version = "5.4.0-alpha.0" }
 grin_wallet_util = { path = "../../lurker-wallet/util", version = "5.4.0-alpha.0" }
+grin_chain = { path = "../chain", version = "5.4.0-alpha.0" }
 
 [dev-dependencies]
-grin_chain = { path = "../chain", version = "5.4.0-alpha.0" }
+# No dev-dependencies needed unless you add tests
